code: Add sample Person-Note relationship
